# nanogpt-speedrun

./: .gitignore  LICENSE  README.md  bench.sh  pyproject.toml  run.sh  tune.sh
logs/: 08047f73-cb01-4f47-a901-de901b2a6b6e.txt  14fcdb07-443d-4d1c-b307-061bc4bd2cd6.txt  2dbf7fa6-561c-49bc-8aae-665fefdd9a44.txt  4c627c0d-029c-4f8a-bd18-40f99b43b22e.txt  59951c17-fbe5-4577-a1bc-6dc0c1802d2e.txt  cf1ef5f9-9f79-4798-9360-2b174d8eb25f.txt
src/: bench.py  train_gpt2.py  tuner.py
src/data/: cached_fineweb10B.py
src/plotting/: attention_masks.py  loss.py  loss_curves.py  loss_vs_seq_position.py  seq_len_analysis.py  token_analysis.py
