[project]
name = "nanogpt-speedrun"
version = "0.1.0"
dependencies = [
    "numpy",
    "torch>=2.5.0",
    "wandb",
]

[project.optional-dependencies]
data = [
    "datasets",
    "huggingface-hub",
    "tiktoken",
    "tqdm"
]
dev = [
    "ipykernel",
    "matplotlib",
    "seaborn"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
include = ["*.py"]
line-length = 180

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"